Add Some More Swagger Docs
